Fixed search box overlapping top menu

--- a/style.css
+++ b/style.css
@@ -6443,7 +6443,7 @@ sup
 	bottom: 12px;
 	width: 0px;
 	z-index: 9;
-	max-height: 50px;
+	max-height: 41px;
 	max-width: 700px;
 }
 
@@ -6458,7 +6458,7 @@ sup
 	border-radius: 0;
 	box-sizing: border-box;
 	color: #fff;
-	font-size: 30px;
+	font-size: 29px;
 	font-family: "GSL";
 	padding-left: 16px;
 	height: 100%;
@@ -6474,7 +6474,7 @@ sup
 	color: transparent;
 	display: block;
 	height: 20px;
-	margin-top: -12px;
+	margin-top: -17px;
 	padding: 0px;
 	position: absolute;
 	right: 10px;
